<resources>
    <string name="app_name">THE QUIZ</string>
    <string name="main_screen_text1">Проверь свои знания и внимательность!</string>
    <string name="main_screen_text2">Ответы на вопросы викторины можно найти в этом зале.</string>
    <string name="main_screen_text3">Космос ждет любознательных!</string>
    <string name="main_button_text">ПОЕХАЛИ!</string>
    <string name="question_1">Какое строение Солнечной системы?</string>
    <string name="question_1_answer_1">геоцентрическое</string>
    <string name="question_1_answer_2">пироцентрическое</string>
    <string name="question_1_answer_3">гелиоцентрическое</string>
    <string name="question_1_answer_4">космологическое</string>
    <string name="question_2">Что находится между Марсом и Юпитером?</string>
    <string name="question_2_answer_1">луна</string>
    <string name="question_2_answer_2">пояс астероидов</string>
    <string name="question_2_answer_3">сатурн</string>
    <string name="question_2_answer_4">меркурий</string>
    <string name="question_3">Кто создал первый телескоп?</string>
    <string name="question_3_answer_1">Галилео Галилей</string>
    <string name="question_3_answer_2">Архимед</string>
    <string name="question_3_answer_3">Леонардо Да Винчи</string>
    <string name="question_3_answer_4">Михаил Ломоносов</string>
    <string name="question_4">Как называется самая известная обсерватория в Санкт-Петербурге?</string>
    <string name="question_4_answer_1">Петербургская</string>
    <string name="question_4_answer_2">Пулковская</string>
    <string name="question_4_answer_3">Обуховская</string>
    <string name="question_4_answer_4">Петровская</string>
    <string name="question_5">На чем предлагал отправиться на Луну писатель-фантаст Жюль Верн?</string>
    <string name="question_5_answer_1">ракета</string>
    <string name="question_5_answer_2">воздушный шар</string>
    <string name="question_5_answer_3">самолет</string>
    <string name="question_5_answer_4">пушечное ядро</string>
    <string name="question_6">Кем был основоположник теоретической космонавтики?</string>
    <string name="question_6_answer_1">ученый-самоучка</string>
    <string name="question_6_answer_2">экспериментатор</string>
    <string name="question_6_answer_3">учитель математики</string>
    <string name="question_6_answer_4">всё вместе</string>
    <string name="question_7">На чем предложил летать в космос с Земли Константин Циолковский?</string>
    <string name="question_7_answer_1">ракета</string>
    <string name="question_7_answer_2">самолет</string>
    <string name="question_7_answer_3">звездолет</string>
    <string name="question_7_answer_4">лунолет</string>
    <string name="question_8">Кто первым рассчитал траекторию полета к Луне?</string>
    <string name="question_8_answer_1">Циолковский</string>
    <string name="question_8_answer_2">Глушко</string>
    <string name="question_8_answer_3">Королев</string>
    <string name="question_8_answer_4">Кондратюк</string>
    <string name="question_9">С кем переписывался Валентин Глушко, будучи подростком?</string>
    <string name="question_9_answer_1">Перельман</string>
    <string name="question_9_answer_2">Циолковский</string>
    <string name="question_9_answer_3">Рынин</string>
    <string name="question_9_answer_4">Морозов</string>
    <string name="question_10">Его книги до сих пор издаются на многих языках мира с прилагательным в названии «Занимательная….» Кто автор?</string>
    <string name="question_10_answer_1">Циолковский</string>
    <string name="question_10_answer_2">Перельман</string>
    <string name="question_10_answer_3">Глушко</string>
    <string name="question_10_answer_4">Цандер</string>
    <string name="on_main_screen">в начало</string>
    <string name="final_text_1">Ты молодец!</string>
    <string name="final_text_2">Но если ты еще не все знаешь - это не повод отчаиваться,</string>
    <string name="final_text_3">а причина для саморазвития.</string>
</resources>