<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center">

        <ImageView
            style="@style/main_image"
            android:id="@+id/final_button"
            android:src="@drawable/final_screen"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@color/purple_500">

        <TextView
            style="@style/text_style_on_main_screen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_text_1"
            android:textAllCaps="true"/>

        <TextView
            style="@style/text_style_on_main_screen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_text_2"
            android:textAllCaps="true">
        </TextView>

        <TextView
            style="@style/text_style_on_main_screen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_text_3"
            android:textAllCaps="true"/>
        <TextView
            style="@style/text_style_on_main_screen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_text3"
            android:textAllCaps="true"/>
    </LinearLayout>
</FrameLayout>
