<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorOnSecondary">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kids_stargazing"
            android:adjustViewBounds="true"
            android:scaleType="fitStart">
        </ImageView>

        <Button
            android:id="@+id/main_button"
            style="@style/ButtonOnMainScreen"
            android:layout_width="450dp"
            android:layout_height="450dp"
            android:layout_gravity="end"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="193dp"
            android:text="@string/main_button_text">
        </Button>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="?attr/colorPrimary">

        <TextView
            style="@style/text_style_on_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/main_screen_text1">
        </TextView>

        <TextView
            style="@style/text_style_on_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/main_screen_text2"
            android:textSize="43sp">
        </TextView>

        <TextView
            style="@style/text_style_on_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/main_screen_text3">
        </TextView>
    </LinearLayout>
</FrameLayout>
